[project]
name = "redash_toolbelt"
version = "0.1.9"
description = "Redash API client and tools to manage your instance."
authors = [{ name = "Redash Maintainers" }]
requires-python = "~=3.6"
readme = "README.md"
license = "BSD-2-Clause"
dependencies = [
    "requests~=2.22.0",
    "click~=8.0.3",
]

[project.urls]
Homepage = "https://github.com/getredash/redash-toolbelt"
Repository = "https://github.com/getredash/redash-toolbelt"

[project.scripts]
gdpr-scrub = "redash_toolbelt.examples.gdpr_scrub:lookup"
find-tables = "redash_toolbelt.examples.find_table_names:main"
clone-dashboard-and-queries = "redash_toolbelt.examples.clone_dashboard_and_queries:main"
export-queries = "redash_toolbelt.examples.query_export:main"
redash-migrate = "redash_toolbelt.examples.migrate:main"

[dependency-groups]
dev = []

[tool.hatch.build.targets.sdist]
include = ["redash_toolbelt"]

[tool.hatch.build.targets.wheel]
include = ["redash_toolbelt"]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

